<resources>
    <string name="app_name">ECAdroid</string>
    <string name="title_activity_login">Sign in</string>
    <string name="developer">Powered By ABP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Member Panel -->
    <string name="login_btn1">Council</string>
    <string name="login_btn2">Society President</string>
    <string name="login_btn3">Member</string>
    <string name="login_btn4">Non-member</string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Navigation strings-->
    <string name="profile">My Profile</string>
    <string name="task">Task Pool</string>
    <string name="Calender">Event Calender</string>
    <string name="budget">Expenses</string>
    <string name="Meet">Meetings</string>
    <string name="log">My Attendance</string>
    <string name="CreateSoc">Create Society</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- Strings related to task pool!-->
    <string name="society">Society</string>
    <string name="title_activity_task_pool_main">TaskPool</string>
    <string name="title_activity_meetings">meetings</string>
    <string name="title_activity_schedule_new">scheduleNew</string>

    <!-- Strings related to Create Society-->
    <string name="prompt_society_name">Name of the Society</string>
    <string name="prompt_president_id">Id of the President</string>
    <string name="prompt_vice_president_id">Id of the Vice President</string>
    <string name="prompt_treasurer_id">Id of the Treasurer</string>
    <string name="prompt_expenses">Budget allotted</string>
    <string name="action_create_soc">Create Society</string>

    <!-- Stings related to new task fragment-->
    <string name="taskname"> Task Name </string>
    <string name="desc">Description </string>
    <string name="assignTo">Assign to :  </string>
    <string name="deadline">Deadline </string>
    <string-array name="assigntask">
        <item>Ahaarya</item>
        <item>Mukhauta</item>
        <item>Philyra</item>
        <item>Glamfire</item>
        <item>Elvira</item>
        <item>Shuffleshots</item>
        <item>Inklings</item>
        <item>NSS</item>
    </string-array>
    <string name="label_add_task">Add New task</string>
    <string name="new_task_prompt">Select a society </string>

    <!-- Strings related to Expenses -->
    <string name="label_total_budget">Our Total Budget</string>
    <string name="label_add_expense">Add Expense</string>
    <string name="label_remaining">Amount Left</string>
    <string name="label_budget_history">Budget History: </string>

    <!-- Strings related to Adding Expenses -->
    <string name="label_date">Date</string>
    <string name="label_details">Expense Description</string>
    <string name="label_amount">Amount Spent</string>
    <string name="added_expense">New Expense added!</string>

    <!-- Strings related to Meetings-->
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_objective">Objective/Agenda</string>
    <string name="label_add_meet">Schedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_member_panel">MemberPanel</string>

</resources>
