<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_person_white_24dp"/>

        <item
            android:id="@+id/nav_task"
            android:title="@string/task"
            android:icon="@drawable/ic_description_white_24dp"/>

        <item
            android:id="@+id/nav_calender"
            android:title="@string/Calender"
            android:icon="@drawable/ic_event_note_white_24dp"/>

        <item
            android:id="@+id/nav_budget"
            android:title="@string/budget"
            android:icon="@drawable/ic_attach_money_white_24dp"/>

        <item
            android:id="@+id/nav_meeting"
            android:title="@string/Meet"
            android:icon="@drawable/ic_group_white_24dp"/>

        <item
            android:id="@+id/nav_log"
            android:title="@string/log"
            android:icon="@drawable/ic_event_note_white_24dp"/>

        <item
            android:id="@+id/nav_society"
            android:title="@string/CreateSoc"
            android:icon="@drawable/ic_add_white_24dp"/>

    </group>

</menu>