<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="54dp">
        <EditText
            android:id="@+id/meeting_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_date"
            android:inputType="date"
            android:textColor="#FFFFFF" />
        <Button
            android:id="@+id/date_setter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/label_date" />


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/meeting_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_from"
                android:inputType="time"
                android:textColor="#FFFFFF" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/meeting_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_to"
                android:inputType="time"
                android:textColor="#FFFFFF" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/meeting_objective"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_objective"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add_meeting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/accent_theme_light"
            android:padding="12dp"
            android:text="@string/label_add_meet" />

    </LinearLayout>
</ScrollView>
