<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="54dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/expense_label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/label_date"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColor="#ffffff" />
            <TextView
                android:id="@+id/expense_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/accent_theme_light"
                android:layout_toRightOf="@id/expense_label_date"
                android:layout_toEndOf="@id/expense_label_date"/>
        </RelativeLayout>


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/expense_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_details"
                android:inputType="textMultiLine"
                android:lines="3"
                android:minLines="1"
                android:gravity="top|left|start"
                android:maxLines="5"
                android:textColor="#FFFFFF" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/expense_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_amount"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add_expense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/accent_theme_light"
            android:padding="12dp"
            android:text="@string/label_add_expense" />

    </LinearLayout>
</ScrollView>
